# pytest-timeouts

./: .gitignore  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  __init__.py  mkdocs.yml  pytest_timeouts.py  setup.cfg  setup.py  test_pytest_timeouts.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: usage.md
example/: requirements.txt  test_dummy.py  tox.ini
