[tool:multilint]
paths = pytest_timeouts.py
        test_pytest_timeouts.py
        
[metadata]
name = pytest-timeouts
description = Linux-only Pytest plugin to control durations of various test case execution phases
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/Scony/pytest-timeouts

project_urls =
    Source=https://github.com/Scony/pytest-timeouts
    Documentation=https://pytest-timeouts.readthedocs.io
    Tracker=https://github.com/Scony/pytest-timeouts/issues

author = Pawel Lampe
author_email = pawel.lampe@gmail.com

license = MIT license
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Testing
    Topic :: Utilities
platforms = unix, linux

[options]
py_modules = pytest_timeouts
python_requires = >=3.5
